--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.tsx",
   "scripts": {
     "build": "react-scripts build",
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "homepage": ".",
   "dependencies": {
