--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A dashboard for displaying various metrics.",
   "main": "src/index.tsx",
   "scripts": {
-    "build": "react-scripts build",
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -17,7 +17,9 @@
     "recharts": "^2.1.9",
     "lucide-react": "^0.268.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "react-app-rewired": "^2.1.8"
+  },
   "author": "",
   "license": "ISC"
 }
