--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "recharts": "^2.1.9"
+    "recharts": "^2.14.1"
   },
   "devDependencies": {
-    "react-app-rewired": "^2.2.1",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.2"
+    "@types/react": "^17.0.83",
+    "@types/react-dom": "^17.0.25",
+    "react-app-rewired": "^2.2.1"
   },
   "browserslist": {
     "production": [
