--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,9 @@
   publish = "dist"
   base = "."
 
+[build.environment]
+  NODE_VERSION = "16"
+
 # Настройка маршрутизации для SPA
 [[redirects]]
   from = "/*"
