--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "dev": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" vite",
     "build": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" tsc && vite build",
-    "preview": "vite preview",
+    "preview": "vite build && node server.js",
     "type-check": "tsc --noEmit",
     "lint": "eslint src --ext ts,tsx",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "googleapis": "^144.0.0",
